fixed layout issues

--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
 }
+
 :root {
   --Orange: hsl(25, 97%, 53%);
   --White: hsl(0, 100%, 100%);
@@ -17,7 +20,9 @@ html {
 }
 
 body {
+  font-family: 'DM Sans', sans-serif;
   line-height: 1.5;
+  background-color: var(--Grey950);
 }
 
 ul {
@@ -49,7 +54,6 @@ p {
 
 main {
   margin: 0 auto;
-  background-color: var(--Grey950);
   padding: 12.5rem 2rem;
 }
 
@@ -73,6 +77,7 @@ main {
   padding: 1.6rem;
   border-radius: 50%;
   background-color: var(--greyc);
+  cursor: pointer;
 }
 
 .rate-text {
@@ -127,6 +132,15 @@ main {
 .submit:hover {
   background-color: var(--White);
   color: var(--Grey500);
+}
+
+/*dark mode toggle */
+body[data-theme='dark'] {
+  background-color: var(--Grey500);
+}
+
+body[data-theme='dark'] .container {
+  background-color: rgb(41, 43, 43);
 }
 
 /*PART 2*/
